--- a/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
+++ b/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
@@ -44,7 +44,7 @@ steps:
   - waitNotification:
       method: textDocument/publishDiagnostics
       saveAs: initialDiagnostics
-      timeoutMs: 15000
+      timeoutMs: 60000 # Increased to 60s to allow Gradle cold start
       checks:
         - jsonPath: $.uri
           expect:
@@ -53,17 +53,17 @@ steps:
   - assert:
       source: initialDiagnostics
       checks:
-        - jsonPath: $.diagnostics
+        - jsonPath: $.diagnostics[?(@.source=='Groovy')]
           expect:
             type: NOT_EMPTY
-        - jsonPath: $.diagnostics[0].message
+        - jsonPath: $.diagnostics[?(@.source=='Groovy')][0].message
           expect:
             type: CONTAINS
             value: "unable to resolve class"
   - waitNotification:
       method: textDocument/publishDiagnostics
       saveAs: resolvedDiagnostics
-      timeoutMs: 15000
+      timeoutMs: 60000 # Increased to 60s to allow Gradle resolution
       checks:
         - jsonPath: $.uri
           expect:
