refactor: address detekt issues and deprecation warnings (#87)
* refactor: address detekt issues and deprecation warnings

Refactored GroovyCompilationService, GroovyTextDocumentService to reduce complexity. Extracted WorkspaceManager and GroovyFormattingService. Fixed lint issues in various files.

* style: fix trailing spaces and missing commas

* fix(pr-review): address code review comments

Refactor WorkspaceManager source root logic to avoid unconditional clearing. Add ensureActive checks to GroovyFormattingService for long-running operations.

* fix(e2e): improve E2E test stability and diagnostics

Ensure cache invalidation on dependency updates in GroovyCompilationService. Update gradle-hover-deps.yaml to robustly check for Groovy diagnostics. Fix diagnostics-dedup.yaml logic. Enhance ScenarioExecutor logging.

* fix(tests): stabilize gradle-hover-deps E2E test

Modified test to wait for successful dependency resolution (empty diagnostics) instead of asserting an intermediate failure state, which was causing flakes on faster environments.

* docs: add KDoc for WorkspaceManager and GroovyFormattingService

* style: address review nitpicks

Make OpenRewriteFormatterAdapter internal and remove redundant suppression comment.

--- a/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
+++ b/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
@@ -43,33 +43,14 @@ steps:
         }
   - waitNotification:
       method: textDocument/publishDiagnostics
-      saveAs: initialDiagnostics
-      timeoutMs: 15000
-      checks:
-        - jsonPath: $.uri
-          expect:
-            type: EQUALS
-            value: "{{workspace.uri}}src/main/groovy/PortMappingDeclaration.groovy"
-  - assert:
-      source: initialDiagnostics
-      checks:
-        - jsonPath: $.diagnostics
-          expect:
-            type: NOT_EMPTY
-        - jsonPath: $.diagnostics[0].message
-          expect:
-            type: CONTAINS
-            value: "unable to resolve class"
-  - waitNotification:
-      method: textDocument/publishDiagnostics
       saveAs: resolvedDiagnostics
-      timeoutMs: 15000
+      timeoutMs: 60000 # Increased to 60s to allow Gradle resolution
       checks:
         - jsonPath: $.uri
           expect:
             type: EQUALS
             value: "{{workspace.uri}}src/main/groovy/PortMappingDeclaration.groovy"
-        - jsonPath: $.diagnostics
+        - jsonPath: $.diagnostics[?(@.source=='Groovy')]
           expect:
             type: EMPTY
   - shutdown: {}
