test: improve testing infrastructure with concurrency and PBT
Introduces concurrency stress tests to detect race conditions in the LSP server and property-based tests for the parser using jqwik. Also refactors existing stress tests to be more accurately named as complex integration tests.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ spock = "2.3-groovy-4.0"
 
 jackson = "2.17.3"
 jsonPath = "2.9.0"
+jqwik = "1.9.1"
 
 [libraries]
 # Plugins (libraries for plugins block)
@@ -68,6 +69,7 @@ assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 spock-core = { module = "org.spockframework:spock-core", version.ref = "spock" }
 json-path = { module = "com.jayway.jsonpath:json-path", version.ref = "jsonPath" }
+jqwik = { module = "net.jqwik:jqwik", version.ref = "jqwik" }
 
 # Jackson
 jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
