--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ replay_pid*
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
 
+# jqwik
+.jqwik-database
+
 # OS files
 .DS_Store
 Thumbs.db
