test: improve testing infrastructure, coverage, and concurrency checks (#92)
* test: improve testing infrastructure with concurrency and PBT

Introduces concurrency stress tests to detect race conditions in the LSP server and property-based tests for the parser using jqwik. Also refactors existing stress tests to be more accurately named as complex integration tests.

* test: enhance coverage and fix visitor bugs

Increases groovy-parser coverage to >54% by adding unit tests for ReferenceResolver, TypeResolver, and DefinitionResolver. Also fixes MethodCallExpression visitation in PositionNodeVisitor and adds comprehensive visitor coverage tests.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ mockk = "1.14.6"
 spock = "2.3-groovy-4.0"
 
 jackson = "2.17.3"
+jqwik = "1.9.1"
 jsonPath = "2.10.0"
 
 [libraries]
@@ -68,6 +69,7 @@ assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 spock-core = { module = "org.spockframework:spock-core", version.ref = "spock" }
 json-path = { module = "com.jayway.jsonpath:json-path", version.ref = "jsonPath" }
+jqwik = { module = "net.jqwik:jqwik", version.ref = "jqwik" }
 
 # Jackson
 jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
