--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,19 +85,19 @@ jobs:
           path: '**/build/test-results/test/*.xml'
           reporter: java-junit
           
-      # Heavy tasks (ShadowJar) only run on main or tags
+      # Heavy tasks (ShadowJar) run on main OR the specific job that creates the artifact (Ubuntu/Java17)
       - name: Build Shadow JAR
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || (matrix.os == 'ubuntu-latest' && matrix.java == 17)
         run: ./gradlew shadowJar --stacktrace $GRADLE_SCAN_FLAG
         
       - name: Verify JAR
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || (matrix.os == 'ubuntu-latest' && matrix.java == 17)
         run: |-
           echo "Testing JAR with --help flag..."
           java -jar groovy-lsp/build/libs/groovy-lsp-*-all.jar --help
           
       - name: Upload JAR artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.java == 17 && github.ref == 'refs/heads/main'
+        if: matrix.os == 'ubuntu-latest' && matrix.java == 17
         uses: actions/upload-artifact@v5
         with:
           name: groovy-lsp-jar
