perf: optimize CI test execution and improve observability
- Set explicit heap sizes (1GB unit tests, 2GB E2E tests)
- Add 5-minute timeout per test to detect hangs early
- Tune parallel forks for better resource management
- Split CI test steps for better visibility (unit vs E2E)
- Refactor Main.kt to accept PrintStream for thread-safe testing
- Fix MainTest concurrency issues caused by System.setOut usage

These changes significantly improve CI reliability by:
- Preventing OOMs with explicit memory limits
- Failing fast on hanging tests (5min vs 2hr timeout)
- Better diagnostic output with split test steps
- Eliminating test interference through proper isolation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,13 @@ jobs:
       - name: Run Quality Checks
         run: ./gradlew lint --stacktrace $GRADLE_SCAN_FLAG
 
-      - name: Run Tests
-        timeout-minutes: 45
+      - name: Run Unit Tests
+        timeout-minutes: 20
         run: ./gradlew test --stacktrace $GRADLE_SCAN_FLAG
+
+      - name: Run E2E Tests
+        timeout-minutes: 30
+        run: ./gradlew :tests:e2eTest --stacktrace $GRADLE_SCAN_FLAG
 
       - name: Run Code Coverage
         run: ./gradlew koverHtmlReport koverXmlReport --stacktrace $GRADLE_SCAN_FLAG
