--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,12 @@ name: Release
   workflow_dispatch:
     inputs:
       runner_label:
-        description: 'Runner label: set to "self-hosted" to enable, anything else uses cloud runners'
+        description: 'Runner label to use'
         required: false
-        type: string
+        type: choice
+        options:
+          - 'cloud'
+          - 'self-hosted'
         default: 'cloud'
       version:
         description: "Release version (e.g., v1.0.0)"
