ci: Enhance self-hosted runner support with strict choices (#105)
* ci: add support for self-hosted runner toggle

* build: add helper script for setting up self-hosted macos runner

* build: update runner version and add hash validation in setup script

* build: make runner version and hash easily configurable in setup script

* fix: strictly bind runner hash to arm64 architecture

* chore(script): update emoji for runner setup

* fix(script): resolve syntax error and add local caching for runner download

* build: ignore github actions runner cache directory

* ci: address review comments for self-hosted runner support

* ci: default to self-hosted runner and add self-hosted support to release workflow

* ci: use choice input for runner_label in workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,13 @@ on:
   workflow_dispatch:
     inputs:
       runner_label:
-        description: 'Runner label: set to "self-hosted" to enable, anything else uses cloud runners'
+        description: 'Runner label to use'
         required: false
-        type: string
-        default: 'cloud'
+        type: choice
+        options:
+          - 'self-hosted'
+          - 'cloud'
+        default: 'self-hosted'
       disable_scan:
         description: Disable Gradle build scan
         required: false
