feat: add Gradle task provider and commands with TDD (#11)
* feat: add Gradle task provider and commands with TDD
* refactor: combine multiple subscription pushes into one (SonarCloud)

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -33,6 +33,34 @@
       {
         "command": "groovy.restartServer",
         "title": "Groovy: Restart Language Server"
+      },
+      {
+        "command": "groovy.gradle.build",
+        "title": "Gradle: Build"
+      },
+      {
+        "command": "groovy.gradle.test",
+        "title": "Gradle: Test"
+      },
+      {
+        "command": "groovy.gradle.clean",
+        "title": "Gradle: Clean"
+      },
+      {
+        "command": "groovy.gradle.selectTask",
+        "title": "Gradle: Select and Run Task"
+      },
+      {
+        "command": "groovy.gradle.dependencies",
+        "title": "Gradle: Show Dependencies"
+      },
+      {
+        "command": "groovy.gradle.refresh",
+        "title": "Gradle: Refresh Project"
+      },
+      {
+        "command": "groovy.gradle.projectInfo",
+        "title": "Gradle: Show Project Info"
       }
     ],
     "languages": [
