--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -61,6 +61,16 @@
       {
         "command": "groovy.gradle.projectInfo",
         "title": "Gradle: Show Project Info"
+      },
+      {
+        "command": "groovy.test.runAll",
+        "title": "Groovy: Run All Tests",
+        "icon": "$(testing-run-all-icon)"
+      },
+      {
+        "command": "groovy.test.runCurrentFile",
+        "title": "Groovy: Run Tests in Current File",
+        "icon": "$(testing-run-icon)"
       }
     ],
     "languages": [
@@ -168,6 +178,7 @@
     "@types/chai": "^5.2.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22",
+    "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^21.0.0",
     "@vscode/vsce": "^3.0.0",
     "chai": "^6.2.1",
@@ -175,6 +186,7 @@
     "eslint": "^9.13.0",
     "mocha": "^11.7.5",
     "npm-run-all": "^4.1.5",
+    "proxyquire": "^2.1.3",
     "sinon": "^21.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
