--- a/editors/code/.github/workflows/main.yml
+++ b/editors/code/.github/workflows/main.yml
@@ -29,21 +29,35 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Compute Groovy LSP cache key
+        id: groovy_lsp_cache
+        if: matrix.os == 'ubuntu-latest'
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -euo pipefail
+          node scripts/compute-groovy-cache-key.js >> "$GITHUB_OUTPUT"
+
       - name: Cache Groovy LSP
         uses: actions/cache@v4
+        if: matrix.os == 'ubuntu-latest'
         with:
           path: server/groovy-lsp.jar
-          key: groovy-lsp-${{ runner.os }}-${{ hashFiles('scripts/prepare-server.js') }}
+          key: groovy-lsp-${{ runner.os }}-${{ steps.groovy_lsp_cache.outputs.tag }}-${{ steps.groovy_lsp_cache.outputs.hash }}
 
       - name: Install dependencies
         run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SKIP_PREPARE_SERVER: ${{ matrix.os != 'ubuntu-latest' }}
 
-      - name: Build and test
-        run: |
-          npm run compile
-          npm run package
+      - name: Build
+        run: npm run compile
+
+      - name: Package (Ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run package
 
       - name: Upload VSIX (Ubuntu only)
         if: matrix.os == 'ubuntu-latest'
