--- a/editors/code/.github/workflows/pr.yml
+++ b/editors/code/.github/workflows/pr.yml
@@ -22,6 +22,7 @@ jobs:
         run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SKIP_PREPARE_SERVER: true
 
       - name: Validate code quality
         run: |
