--- a/editors/code/.github/workflows/release-please.yml
+++ b/editors/code/.github/workflows/release-please.yml
@@ -23,4 +23,5 @@ jobs:
         id: release
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          release-type: node
+          config-file: .release-please-config.json
+          manifest-file: .release-please-manifest.json
