--- a/editors/code/.release-please-config.json
+++ b/editors/code/.release-please-config.json
@@ -7,7 +7,8 @@
       "changelog-path": "CHANGELOG.md",
       "prerelease": true,
       "prerelease-type": "alpha",
-      "release-as": "0.1.0-alpha.0"
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true
     }
   }
 }
