--- a/editors/code/.release-please-config.json
+++ b/editors/code/.release-please-config.json
@@ -8,7 +8,8 @@
       "prerelease": true,
       "prerelease-type": "alpha",
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true
+      "bump-patch-for-minor-pre-major": true,
+      "versioning-strategy": "prerelease"
     }
   }
 }
