--- a/editors/code/.release-please-config.json
+++ b/editors/code/.release-please-config.json
@@ -9,7 +9,8 @@
       "prerelease-type": "alpha",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
-      "versioning-strategy": "prerelease"
+      "versioning-strategy": "prerelease",
+      "release-as": "0.1.0-alpha.0"
     }
   }
 }
